--- a/app/partials/Personal/ShipmentDetails.html
+++ b/app/partials/Personal/ShipmentDetails.html
@@ -5,7 +5,7 @@
 			<i class="fa fa-spinner fa-pulse fa-3x"></i>
 			</div>
 	
-		<div class="col-md-12 col-sm-12 col-xs-12 padding-right-30 padding-left-20">
+		<div class="col-lg-12 col-md-6 col-sm-12 col-xs-12 padding-right-30 padding-left-20">
                 <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
                     <div class="r4_counter wid-stats db_box">
                         <div class='stats-data'>
@@ -18,7 +18,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
                     <div class="r4_counter wid-stats db_box">
                         <div class='stats-data'>
                             <i class="material-icons icon-warning pull-left">forward</i>
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
                     <div class="r4_counter wid-stats db_box">
                         <div class='stats-data'>
                             <i class="material-icons icon-success pull-left">check_circle</i>
@@ -40,14 +40,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
+                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
                     <div class="r4_counter wid-stats db_box">
                         <div class='stats-data'>
                             
                             <i class="material-icons icon-danger pull-left">error</i>
                             <div class="stats">
                                 <h3 count-to="{{notSentNumber}}" value="0" duration="1" class="number_counter" ></h3>
-                                <span>Shipment Not Sent</span>
+                                <span>Not Sent</span>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
+				
+				<div class="col-lg-2 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
+                    <div class="r4_counter wid-stats db_box">
+                        <div class='stats-data'>
+                            
+                            <i class="material-icons icon-danger pull-left">report_problem</i>
+                            <div class="stats">
+                                <h3 count-to="{{sentError}}" value="0" duration="1" class="number_counter" ></h3>
+                                <span>Error</span>
                             </div>
                         </div>
                     </div>
