New Plant for shipment

--- a/app/partials/Personal/ShipmentDetails.html
+++ b/app/partials/Personal/ShipmentDetails.html
@@ -264,10 +264,71 @@
 														<option>JWJ6</option>
 														<option>JWJ7</option>
 														
+														<!--Sendai -->
 														
+														<option>JWF4</option>
+														<option>JF77</option>
+														<option>JWF5</option>
+														<option>JFBM</option>
 														
+														<option>JWF6</option>
+														<option>JFBN</option>
+														<option>JWF7</option>
+														<option>JFBO</option>
 														
+														<option>JWF8</option>
+														<option>JFBP</option>
+														<option>JWF9</option>
+														<option>JFBQ</option>
 														
+														<option>JWG1</option>
+														<option>JFBR</option>
+														<option>JWH3</option>
+														<option>JWG2</option>
+														
+														<option>JFBS</option>
+														<option>JWG3</option>
+														<option>JFBT</option>
+														<option>JWG4</option>
+														
+														<option>JFBS</option>
+														<option>JWG3</option>
+														<option>JFBT</option>
+														<option>JWG4</option>
+														
+														<option>JFBU</option>
+														<option>JWG5</option>
+														<option>JFBV</option>
+														<option>JWG6</option>
+														
+														<option>JFBW</option>
+														<option>JWG7</option>
+														<option>JFBX</option>
+														<option>JWG8</option>
+														
+														<option>JFBW</option>
+														<option>JWG7</option>
+														<option>JFBX</option>
+														<option>JWG8</option>
+														
+														<option>JFBY</option>
+														<option>JWG9</option>
+														<option>JFBZ</option>
+														<option>JWH1</option>
+														
+														<option>JFC0</option>
+														<option>JWH2</option>
+														<option>JFC1</option>
+														<option>JFC2</option>
+														
+														<option>JFC3</option>
+														<option>JFC4</option>
+														<option>JWJ8</option>
+														<option>JWJ9</option>
+														
+														<option>JWJA</option>
+														<option>JWJB</option>
+														<option>JWJC</option>
 														
 														
 													</select>
