--- a/app/partials/Personal/ShipmentDetails.html
+++ b/app/partials/Personal/ShipmentDetails.html
@@ -66,8 +66,26 @@
                     </div>
                 </div> 
             </div>
+			
+			
         
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 padding-right-30 padding-left-20">
 
+		<div class="clearfix"/>
+		
+                    <table class="table table-striped">
+													
+							
+							<tr>
+							<td> <h4><span class="label label-primary" >Tokyo</span> : {{tokyoCount}} </h4></td>
+							<td > <h4><span class="label label-warning" >Sendai</span> : {{sendaiCount}} </h4></td>
+							</tr>
+							
+							
+								
+						</table>
+         
+		</div>
 
 		<div class="col-lg-12">
 		<!--
@@ -159,9 +177,8 @@
 									<i class="fa fa-calendar" style="color: #999;"/>
 								</span>
 							</div>
-
-
-
+							
+							
 
 							<div class="col-md-12 col-sm-12 col-xs-12">
 
@@ -175,7 +192,7 @@
 											<div class="clearfix"/>
 											<br>
 											
-												<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
+												<div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
 												<div class="btn-group margin-bottom-10 margin-right-15" style="float:left">
 													<label class="btn btn-primary" ng-click="FilterAll()" >All</label>
 													<label class="btn btn-warning" ng-click="FilterRushOrder()"  >Rush Order</label>
@@ -184,7 +201,7 @@
 												</div>
 												
 
-												<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
+												<div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
 													<select class="form-control input-lg" ng-model="plantSearch" >
 													<option value="">Choose Plant For Filter</option>
 														<option>JW63</option>
@@ -342,7 +359,7 @@
 												</div>
 												</div>
 												-->
-												<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
+												<div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
 												<select class="form-control input-lg" ng-model="StatusSearch" >
 													<option value="">Status</option>
 														<option value="0">Not Sent Yet</option>
@@ -353,6 +370,27 @@
 														
 													</select>
 													</div>
+													
+													<div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
+														<select class="form-control input-lg" ng-model="waveSearch" >
+														<option value="">Wave</option>
+														<option value="Tokyo">Tokyo</option>
+														<option value="Sendai">Sendai</option>
+														
+													</select>
+													</div>
+													
+													
+													<!--
+													<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
+													<select class="form-control input-lg" ng-model="wave" >
+														<option value=""></option>
+															<option value="0">Tokyo</option>
+															<option value="1">Sendai</option>
+															
+														</select>
+													</div>
+													-->
 
 												<div class="clearfix"/>
 												<br>
@@ -456,8 +494,12 @@
 																	</th>
 																	-->
 																	<th >
+                                        Wave
+																	</th>
+																	<th >
                                         Status
 																	</th>
+																	
 
 
 
@@ -467,7 +509,7 @@
 
 
 															<tbody>
-																<tr    dir-paginate="x in truckStockList | filter:search | filter:plantSearch | filter:{ Entry6 : StatusSearch } | filter:{ Entry5 : filterRush } | filter:{ Entry6 : filterStatus } |itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
+																<tr    dir-paginate="x in truckStockList | filter:search | filter:plantSearch | filter:{ Entry6 : StatusSearch } | filter:{ Entry5 : filterRush } | filter:{ Entry6 : filterStatus } | filter:{ Entry14 : waveSearch } |itemsPerPage:10  "  data-user-id="{{x.Entry1}}">
 																	<td>{{ x.Entry1 }}</td>
 																	<!-- <td>{{ x.Entry2 }}</td> -->
 																	<td>{{ x.Entry3 }}</td>
@@ -487,6 +529,8 @@
 														{{ (x.Entry5=='N') ? "Normal Order" : "Rush Order" }}
 																		</td>
 																		
+																		<td> <span class="label label-primary" >{{ x.Entry14 }}</span> </td>
+																		<!-- <td>{{ x.Entry14 }}</td> -->
 																		<!-- <td>{{ x.formattedDate }}</td> -->
 																		
 																		<td>
