select with search

--- a/app/partials/Personal/Settlement.html
+++ b/app/partials/Personal/Settlement.html
@@ -153,8 +153,9 @@
 												</div>
 												
 												<div class="col-lg-4 col-md-3 col-xs-12 col-sm-6">
-													<select class="form-control input-lg" ng-model="plantSearch" >
+													<select class="form-control input-lg" ng-model="plantSearch" ui-jq="chosen" >
 													<option value="">Choose Plant For Filter</option>
+														<optgroup label="TOKYO PLANT">
 														<option>JW63</option>
 														<option>JW64</option>
 														<option>JW65</option>
@@ -231,6 +232,75 @@
 														<option>JWJ5</option>
 														<option>JWJ6</option>
 														<option>JWJ7</option>
+													</optgroup>
+														
+													<optgroup label="SENDAI PLANT">	
+														<!--Sendai -->
+														
+														<option>JWF4</option>
+														<option>JF77</option>
+														<option>JWF5</option>
+														<option>JFBM</option>
+														
+														<option>JWF6</option>
+														<option>JFBN</option>
+														<option>JWF7</option>
+														<option>JFBO</option>
+														
+														<option>JWF8</option>
+														<option>JFBP</option>
+														<option>JWF9</option>
+														<option>JFBQ</option>
+														
+														<option>JWG1</option>
+														<option>JFBR</option>
+														<option>JWH3</option>
+														<option>JWG2</option>
+														
+														<option>JFBS</option>
+														<option>JWG3</option>
+														<option>JFBT</option>
+														<option>JWG4</option>
+														
+														<option>JFBS</option>
+														<option>JWG3</option>
+														<option>JFBT</option>
+														<option>JWG4</option>
+														
+														<option>JFBU</option>
+														<option>JWG5</option>
+														<option>JFBV</option>
+														<option>JWG6</option>
+														
+														<option>JFBW</option>
+														<option>JWG7</option>
+														<option>JFBX</option>
+														<option>JWG8</option>
+														
+														<option>JFBW</option>
+														<option>JWG7</option>
+														<option>JFBX</option>
+														<option>JWG8</option>
+														
+														<option>JFBY</option>
+														<option>JWG9</option>
+														<option>JFBZ</option>
+														<option>JWH1</option>
+														
+														<option>JFC0</option>
+														<option>JWH2</option>
+														<option>JFC1</option>
+														<option>JFC2</option>
+														
+														<option>JFC3</option>
+														<option>JFC4</option>
+														<option>JWJ8</option>
+														<option>JWJ9</option>
+														
+														<option>JWJA</option>
+														<option>JWJB</option>
+														<option>JWJC</option>
+													</optgroup>	
 														
 														
 														
