--- a/app/partials/Personal/ShipmentDetails.html
+++ b/app/partials/Personal/ShipmentDetails.html
@@ -202,8 +202,9 @@
 												
 
 												<div class="col-lg-3 col-md-3 col-xs-12 col-sm-6">
-													<select class="form-control input-lg" ng-model="plantSearch" >
+													<select class="form-control input-lg" ng-model="plantSearch" ui-jq="chosen" >
 													<option value="">Choose Plant For Filter</option>
+													<optgroup label="TOKYO PLANT">
 														<option>JW63</option>
 														<option>JW64</option>
 														<option>JW65</option>
@@ -280,7 +281,9 @@
 														<option>JWJ5</option>
 														<option>JWJ6</option>
 														<option>JWJ7</option>
+													</optgroup>
 														
+													<optgroup label="SENDAI PLANT">	
 														<!--Sendai -->
 														
 														<option>JWF4</option>
@@ -346,7 +349,7 @@
 														<option>JWJA</option>
 														<option>JWJB</option>
 														<option>JWJC</option>
-														
+													</optgroup>	
 														
 													</select>
 												</div>
