--- a/app/partials/Personal/PriceValidation_RS_W4.html
+++ b/app/partials/Personal/PriceValidation_RS_W4.html
@@ -1,4 +1,4 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Price Validation';">
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Price Validation RS Wave (4)';">
     <div class="col-lg-12 " ng-controller="PriceValidationController" ng-init='load()' >
         
 					
