--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -61,8 +61,21 @@
 								-->
 								
 								<li ui-sref-active="active">
-                                    <a ui-sref="app.tables.priceValidation">Price Validation</a>
+                                    <a ui-sref="app.tables.priceValidation">Price Validation RS</a>
                                 </li>
+								<!--
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.priceValidationRSW4">Price Validation RS (WAVE 4)</a>
+                                </li>
+								-->
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.priceValidationFS">Price Validation FS</a>
+                                </li>
+								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.a624Check">A624 Check</a>
+                                </li>
+								
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.GuardRrail">GuardRail (Pricing Tool/SAP)</a>
                                 </li>
@@ -271,6 +284,23 @@
                                 </li>
                             </ul>
     </li>
+	<!--
+	<li href class="auto"> 
+                            <a href="javascript:;">
+                                <i class="material-icons">apps</i>
+                                <span class="title">Logs</span>
+                                <span class="arrow material-icons">keyboard_arrow_right</span>
+                            </a>
+                            <ul class="wraplist wraplist-sub sub-menu dk" >
+                    						
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.logHistory">Log History</a>
+                                </li>
+                            </ul>
+    </li>
+	
+	-->
+	
 	
 	<!--
 	<li ui-sref-active="active">
