--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -61,7 +61,11 @@
 								-->
 								
 								<li ui-sref-active="active">
-                                    <a ui-sref="app.tables.priceValidation">Price Validation RS</a>
+                                    <a ui-sref="app.tables.priceValidation">Price Validation RS - TONE</a>
+                                </li>
+								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.priceValidationMikone">Price Validation RS - MIKONE</a>
                                 </li>
 								<!--
 								<li ui-sref-active="active">
