--- a/app/partials/Personal/PriceValidation_RS_Other.html
+++ b/app/partials/Personal/PriceValidation_RS_Other.html
@@ -1,5 +1,5 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Price Validation Wave3_Tone';">
-    <div class="col-lg-12 " ng-controller="PriceValidationController" ng-init='load()' >
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Price Validation Wave3_Mikone';">
+    <div class="col-lg-12 " ng-controller="PriceValidation_Additional_Controller" ng-init='load()' >
         
 					
 					
