--- a/app/partials/Personal/PriceValidation_RS_Other.html
+++ b/app/partials/Personal/PriceValidation_RS_Other.html
@@ -1,4 +1,4 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Price Validation Wave3_Mikone';">
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Price Validation Wave3_Mikune';">
     <div class="col-lg-12 " ng-controller="PriceValidation_Additional_Controller" ng-init='load()' >
         
 					
