--- a/app/partials/Personal/A624Check.html
+++ b/app/partials/Personal/A624Check.html
@@ -196,6 +196,9 @@
 																	<th>
 																	knumh
 																	</th>
+																	<th>
+																	Filename
+																	</th>
 																	
 																	<th>
 																	Date
@@ -223,6 +226,7 @@
 																		<td>{{ x.formatDateWithoutTime }}</td>
 																		
 																		<td>{{ x.Entry13 }}</td>
+																		<td>{{ x.Entry14 }}</td>
 																		<td>{{ x.formattedDate }}</td>
 																
 																		
