--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -65,7 +65,7 @@
                                 </li>
 								
 								<li ui-sref-active="active">
-                                    <a ui-sref="app.tables.priceValidationMikone">Price Validation RS - MIKUNE</a>
+                                    <a ui-sref="app.tables.priceValidationMikone">Price Validation RS - MIKUNI</a>
                                 </li>
 								<!--
 								<li ui-sref-active="active">
