--- a/app/partials/Personal/A624Check.html
+++ b/app/partials/Personal/A624Check.html
@@ -3,71 +3,48 @@
 
 		<div class="col-md-12 col-sm-12 col-xs-12 padding-right-30 padding-left-20">
 		
-		<!--
-                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0 col-md-offset-1">
-                    <div class="r4_counter wid-stats db_box">
-                        <div class='stats-data'>
-                            
-                            <i ng-class="{ true : 'material-icons icon-danger pull-left' , false : 'material-icons icon-success pull-left' } [matnrCount > 0] " >{{ (matnrCount > 0) ? "error" :  "check_circle"  }}</i>
-                            <div class="stats">
-                                <h3 count-to="{{matnrCount}}" value="0" duration="1" />
-                                <span>MATNR</span>
-                            </div>
-                        </div>
-                    </div>
+		<div class="col-md-8 col-sm-8 col-xs-8">
+		
+			<section class="box ">
+            <header class="panel_header">
+                <h2 class="title pull-left">Today's compared files</h2>
+                <div class="actions panel_actions pull-right">
+                    <i class="box_toggle material-icons">expand_more</i>
+                    
                 </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
-                    <div class="r4_counter wid-stats db_box">
-                        <div class='stats-data'>
-                           <i ng-class="{ true : 'material-icons icon-danger pull-left' , false : 'material-icons icon-success pull-left' } [cpgCount > 0] " >{{ (cpgCount > 0) ? "error" :  "check_circle"  }}</i>
-                            <div class="stats">
-                                <h3 count-to="{{cpgCount}}" value="0" duration="1" class="number_counter" ></h3>
-                                <span>CCEJ_CPG</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
-                    <div class="r4_counter wid-stats db_box">
-                        <div class='stats-data'>
-                            <i ng-class="{ true : 'material-icons icon-danger pull-left' , false : 'material-icons icon-success pull-left' } [caseCount > 0] " >{{ (caseCount > 0) ? "error" :  "check_circle"  }}</i>
-                            <div class="stats">
-                                <h3 count-to="{{caseCount}}" value="0" duration="1" class="number_counter"></h3>
-                                <span>VRKME_Case</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
-                    <div class="r4_counter wid-stats db_box">
-                        <div class='stats-data'>
-                            
-                            <i ng-class="{ true : 'material-icons icon-danger pull-left' , false : 'material-icons icon-success pull-left' } [looseCount > 0] " >{{ (looseCount > 0) ? "error" :  "check_circle"  }}</i>
-                            <div class="stats">
-                                <h3 count-to="{{looseCount}}" value="0" duration="1" class="number_counter" ></h3>
-                                <span>VRKME_Loose</span>
-                            </div>
-                        </div>
-                    </div>
-                </div> 
-				
-				<div class="col-lg-2 col-md-6 col-sm-6 col-xs-12 padding-right-0 padding-left-0">
-                    <div class="r4_counter wid-stats db_box">
-                        <div class='stats-data'>
-                            
-                            <i ng-class="{ true : 'material-icons icon-danger pull-left' , false : 'material-icons icon-success pull-left' } [sapCount > 0] " >{{ (sapCount > 0) ? "error" :  "check_circle"  }}</i>
-                            <div class="stats">
-                                <h3 count-to="{{sapCount}}" value="0" duration="1" class="number_counter" ></h3>
-                                <span>SAP</span>
+            </header>
+			
+			 <div class="content-body  padding-top-0">
+				<table class="table table-striped">
+							<thead>
+								<tr>
+								<th data-toggle="true">
+								Status
+								</th>
+								<th data-toggle="true">
+								Filename
+								</th>
+								<th data-toggle="true">
+								Compare Date
+								</th>
+								</tr>
+							</thead>
+							
+							<tbody>
+								<tr    dir-paginate="x in fileList | itemsPerPage:10  "  >
+								<td><i class='fa fa-check-circle icon-success fa-2x'></i></td>
+								<td>{{ x.Entry1 }}</td>
+								<td> {{ x.Entry3 }}  {{ x.Entry4 }}</td>
+								</tr>
+							</tbody>
 								
-                            </div>
-                        </div>
-                    </div>
-                </div> 
+						</table>
+						</div>
+        </section>
+		
+		</div>
 				
-				-->
-				
-            </div>
+        </div>
         
 
 
@@ -110,11 +87,21 @@
 								<div class="content-body padding-bottom-0">
 									<div class="row">
 										
-										
-										<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-											<input type="text" ng-model="search" class="form-control" placeholder="Search">
-
+											<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12"  >
+											<h3>Data compare  : {{formattedDate}} </h3>
 											</div>
+										
+											<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12" ng-show="fileUsedState" >
+											Text ...
+											</div>
+											
+											<div class="clearfix"/>
+											<br>
+											
+											<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+											<input type="text" class="form-control" placeholder="Search">
+											</div>
+											
 											<!--
 											<div class="col-lg-3 col-md-3 col-xs-12 col-sm-12">
 													<select class="form-control input-lg" ng-model="errorTypeSearch" ng-change="filterError()" >
@@ -254,6 +241,8 @@
 
 															</div>
 														</div>
+														
+														
 
 
 
