--- a/app/partials/Personal/A624Check.html
+++ b/app/partials/Personal/A624Check.html
@@ -134,7 +134,7 @@
 															<thead>
 																<tr>
 																	<th data-toggle="true">
-																	
+																	Status
 																	</th>
 																	<th data-toggle="true">
 																	MANDT
@@ -201,7 +201,10 @@
 															<tbody>
 																<tr    dir-paginate="x in pricingList | filter : search | itemsPerPage:10  "  >
 																
-																		<td><i class='fa fa-exclamation-circle icon-danger fa-2x'></i></td>
+																		<td><i ng-class="{ '1' : 'fa fa-check-circle icon-success fa-2x' , '0' : 'fa fa-exclamation-circle icon-danger fa-2x' } [x.Entry15] " ></i></td>
+																		
+																		
+																		
 																		<td>{{ x.Entry1 }}</td>
 																		<td>{{ x.Entry2 }}</td>
 																		<td>{{ x.Entry3 }}</td>
