--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -35,6 +35,14 @@
                                     <a>MD Customer<span class="arrow material-icons">keyboard_arrow_right</span></a>
                                     <ul class="wraplist wraplist-sub sub-menu dk" >
 
+										<li ui-sref-active="active">
+                                            <a ui-sref="app.tables.customerFlatFilesGeneration" >SAP To Flat_Files</a>
+                                        </li>
+										
+										<li ui-sref-active="active">
+                                            <a ui-sref="app.tables.customerFlatFiles" >Flat_Files To Mysql</a>
+                                        </li>
+										
                                         <li ui-sref-active="active">
                                             <a ui-sref="app.tables.customer1" >Daily</a>
                                         </li>
