small fix for Customer

--- a/app/partials/Personal/CustomerFlatFile.html
+++ b/app/partials/Personal/CustomerFlatFile.html
@@ -1,4 +1,4 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Customer Master Flat Files';">
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Customer Master Flat Files To MySQL';">
 	<div class="col-lg-12" ng-controller="CustomerFlatFileController" ng-init='load()' >
 
 
