--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -44,10 +44,10 @@
                                         </li>
 										
                                         <li ui-sref-active="active">
-                                            <a ui-sref="app.tables.customer1" >Daily</a>
+                                            <a ui-sref="app.tables.customer1" >Daily (Old)</a>
                                         </li>
                                         <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.CustomerPreviousDay">Previous Day</a>
+                                    <a ui-sref="app.tables.CustomerPreviousDay">Previous Day (Old)</a>
                                 </li>
                                     </ul>
                                 </li>
