truck stock fix

--- a/app/partials/Personal/TruckStock.html
+++ b/app/partials/Personal/TruckStock.html
@@ -143,11 +143,7 @@
 									</div>
 									<br></br>
 
-									<div class="btn-group margin-bottom-10 margin-right-15" style="float:left" >
-										<label class="btn btn-primary" ng-click="FilterAll()" >All</label>
-										<label class="btn btn-success" ng-click="FilterOnlyNotCorrected()"  >No Correction</label>
-										<label class="btn btn-warning" ng-click="FilterOnlyCorrected()" >Corrected</label>
-									</div>
+									
 									<div class="btn-group margin-bottom-10" style="float:right" >
 										<label class="btn btn-primary" ng-click="FilterAllStatus()" >All</label>
 										<label class="btn btn-success" ng-click="FilterOnlySent()"  >Sent</label>
@@ -212,19 +208,15 @@
 														<th data-toggle="true">
                                         Date
 														</th>
-														<th>
-                                        Plant JW71
-														</th>
-														<th >
-                                        Plant JW64
-														</th>
-														<th >
-                                        To New Hokan
+														<th data-toggle="true">
+                                        Plant
 														</th>
 														
 														<th >
-                                        Correction
+                                        Status
 														</th>
+														
+														
 														
 														
 													</tr>
