shipment tone + mikune

--- a/app/partials/Personal/ShipmentDetails.html
+++ b/app/partials/Personal/ShipmentDetails.html
@@ -79,8 +79,8 @@
 							<tr>
 							<td> <h4><span class="label label-primary" >Tokyo</span> : {{tokyoCount}} </h4></td>
 							<td > <h4><span class="label label-warning" >Sendai</span> : {{sendaiCount}} </h4></td>
-							<td > <h4><span class="label label-success" >Tone</span> : 0 </h4></td>
-							<td > <h4><span class="label label-success" >Mikuni</span> : 0 </h4></td>
+							<td > <h4><span class="label label-success" >Tone</span> : {{toneCount}} </h4></td>
+							<td > <h4><span class="label label-success" >Mikuni</span> : {{mikuneCount}} </h4></td>
 							</tr>
 							
 							
@@ -544,6 +544,8 @@
 														<option value="">Wave</option>
 														<option value="Tokyo">Tokyo</option>
 														<option value="Sendai">Sendai</option>
+														<option value="Tone">Tone</option>
+														<option value="Mikuni">Mikuni</option>
 														
 													</select>
 													</div>
