Export fix + plant wave3

--- a/app/partials/Personal/Settlement.html
+++ b/app/partials/Personal/Settlement.html
@@ -302,7 +302,168 @@
 														<option>JWJC</option>
 													</optgroup>	
 														
+														<optgroup label="TONE PLANT">	
+														<!--TONE -->
+															<option>JW01</option>
+															<option>JFC9</option>
+															<option>JW02</option>
+															<option>JF19</option>
+															<option>JW03</option>
+															<option>JF20</option>
+															<option>JW04</option>
+															<option>JFCA</option>
+															<option>JW05</option>
+															<option>JFCB</option>
+															<option>JW06</option>
+															<option>JFCC</option>
+															<option>JW07</option>
+															<option>JFCD</option>
+															<option>JW08</option>
+															<option>JFCE</option>
+															<option>JW09</option>
+															<option>JFCF</option>
+															<option>JW10</option>
+															<option>JF21</option>
+															<option>JW11</option>
+															<option>JFCG</option>
+															<option>JW12</option>
+															<option>JFCH</option>
+															<option>JW13</option>
+															<option>JFCI</option>
+															<option>JW14</option>
+															<option>JFCJ</option>
+															<option>JW15</option>
+															<option>JW16</option>
+															<option>JFCK</option>
+															<option>JWO8</option>
+															<option>JFCL</option>
+															<option>JWO9</option>
+															<option>JFCM</option>
+															<option>JW17</option>
+															<option>JF22</option>
+															<option>JW18</option>
+															<option>JFCN</option>
+															<option>JW19</option>
+															<option>JF23</option>
+															<option>JW20</option>
+															<option>JF24</option>
+															<option>JW21</option>
+															<option>JFCO</option>
+															<option>JW22</option>
+															<option>JFCP</option>
+															<option>JW23</option>
+															<option>JF25</option>
+															<option>JW24</option>
+															<option>JF26</option>
+															<option>JW25</option>
+															<option>JF27</option>
+															<option>JW26</option>
+															<option>JFCQ</option>
+															<option>JW27</option>
+															<option>JF28</option>
+															<option>JW28</option>
+															<option>JFCR</option>
+															<option>JW29</option>
+															<option>JFCS</option>
+															<option>JW30</option>
+															<option>JFCT</option>
+															<option>JW31</option>
+															<option>JFCU</option>
+															<option>JW32</option>
+															<option>JFA6</option>
+															<option>JW33</option>
+															<option>JFA7</option>
+															<option>JW34</option>
+															<option>JFA8</option>
+															<option>JW35</option>
+															<option>JFA9</option>
+															<option>JWOB</option>
+															<option>JFD6</option>
+															<option>JFDC</option>
+															<option>JFDD</option>
+															<option>JFDE</option>
+															<option>JFDF</option>
+															<option>JFDG</option>
+															<option>JWOH</option>
+															<option>JWOI</option>
+															<option>JWOJ</option>
+															<option>JWOK</option>
+															<option>JWOL</option>
+
 														
+														</optgroup>
+														
+														<optgroup label="MIKUNI PLANT">	
+														<!--MIKUNI -->
+														<option>JW36</option>
+														<option>JF29</option>
+														<option>JW37</option>
+														<option>JF30</option>
+														<option>JW38</option>
+														<option>JF31</option>
+														<option>JW39</option>
+														<option>JF32</option>
+														<option>JW40</option>
+														<option>JFCV</option>
+														<option>JW41</option>
+														<option>JF33</option>
+														<option>JW42</option>
+														<option>JFCW</option>
+														<option>JW43</option>
+														<option>JFCX</option>
+														<option>JW44</option>
+														<option>JF34</option>
+														<option>JW45</option>
+														<option>JFCY</option>
+														<option>JW46</option>
+														<option>JF35</option>
+														<option>JW47</option>
+														<option>JF36</option>
+														<option>JWOA</option>
+														<option>JFCZ</option>
+														<option>JW48</option>
+														<option>JF37</option>
+														<option>JWH8</option>
+														<option>JF05</option>
+														<option>JW49</option>
+														<option>JF38</option>
+														<option>JW50</option>
+														<option>JF39</option>
+														<option>JW51</option>
+														<option>JFD0</option>
+														<option>JW52</option>
+														<option>JFD1</option>
+														<option>JW53</option>
+														<option>JF40</option>
+														<option>JW54</option>
+														<option>JF41</option>
+														<option>JW55</option>
+														<option>JF42</option>
+														<option>JW56</option>
+														<option>JF43</option>
+														<option>JW57</option>
+														<option>JF44</option>
+														<option>JW58</option>
+														<option>JFD2</option>
+														<option>JW59</option>
+														<option>JF45</option>
+														<option>JW60</option>
+														<option>JFD3</option>
+														<option>JW61</option>
+														<option>JFD4</option>
+														<option>JW62</option>
+														<option>JFD5</option>
+														<option>JFD7</option>
+														<option>JFD8</option>
+														<option>JFD9</option>
+														<option>JFDA</option>
+														<option>JFDB</option>
+														<option>JWOC</option>
+														<option>JWOD</option>
+														<option>JWOE</option>
+														<option>JWOF</option>
+														<option>JWOG</option>
+														</optgroup>
 														
 														
 														
