--- a/app/partials/Personal/PriceValidation.html
+++ b/app/partials/Personal/PriceValidation.html
@@ -1,4 +1,4 @@
-<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Price Validation Wave3_Tone';">
+<div class='content-wrapper' ng-init="app.settings.pagetitle = 'Price Validation Wave4';">
     <div class="col-lg-12 " ng-controller="PriceValidationController" ng-init='load()' >
         
 					
