--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -69,9 +69,9 @@
 								-->
 								
 								<li ui-sref-active="active">
-                                    <a ui-sref="app.tables.priceValidation">Price Validation RS - TONE</a>
+                                    <a ui-sref="app.tables.priceValidation">Price Validation RS - Wave 4</a>
                                 </li>
-								
+								<!--
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.priceValidationMikone">Price Validation RS - MIKUNI</a>
                                 </li>
@@ -81,7 +81,7 @@
                                 </li>
 								-->
 								<li ui-sref-active="active">
-                                    <a ui-sref="app.tables.priceValidationFS">Price Validation FS</a>
+                                    <a ui-sref="app.tables.priceValidationFS">Price Validation FS - Wave 4</a>
                                 </li>
 								
 								<li ui-sref-active="active">
@@ -296,7 +296,7 @@
                                 </li>
                             </ul>
     </li>
-	<!--
+	
 	<li href class="auto"> 
                             <a href="javascript:;">
                                 <i class="material-icons">apps</i>
@@ -304,14 +304,19 @@
                                 <span class="arrow material-icons">keyboard_arrow_right</span>
                             </a>
                             <ul class="wraplist wraplist-sub sub-menu dk" >
-                    						
+                    				<!--		
                                 <li ui-sref-active="active">
                                     <a ui-sref="app.tables.logHistory">Log History</a>
                                 </li>
+								-->
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.LogGetDataProduction">Get_Data_Production</a>
+                                </li>
+								
                             </ul>
     </li>
 	
-	-->
+	
 	
 	
 	<!--
