--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -88,6 +88,16 @@
                                     <a ui-sref="app.tables.a624Check">A624 Check</a>
                                 </li>
 								
+								<!--
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.commission">Commission Check</a>
+                                </li>
+								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.FSCommissionFile">FS Commission File</a>
+                                </li>
+								
+								
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.GuardRrail">GuardRail (Pricing Tool/SAP)</a>
                                 </li>
@@ -104,6 +114,7 @@
                                     <a ui-sref="app.tables.promotion">Promotion (Pricing Tool/SAP)</a>
                                 </li>
 								
+								-->
                                     </ul>
                                 </li>
 								
@@ -312,6 +323,12 @@
 								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.LogGetDataProduction">Get_Data_Production</a>
                                 </li>
+								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.salesReporting">Sales Reporting</a>
+                                </li>
+								
+								
 								
                             </ul>
     </li>
